...
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <!--suppress AndroidMissingOnClickHandler -->
    <Button
        android:id="@+id/startChat"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/chat_bubble_blue"
        android:fontFamily="@font/rubik_medium"
        android:onClick="isValidIP"
        android:text="Start Chat"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressHolder"
        tools:ignore="HardcodedText" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nicknameHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:textColor="#777777"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/GetStart">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:gravity="center"
            android:hint="Enter Nickname"
            android:inputType="text|textCapSentences"
...
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/nicknameHolder">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ipAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890.:"
            android:fontFamily="@font/rubik_light"
            android:gravity="center"
            android:hint="Enter IP Address"
...
