...
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/panelBackground"
        android:tint="#343434"
        app:layout_constraintBottom_toTopOf="@+id/chatRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_back" />

    <TextView
        android:id="@+id/nicknameHeader"
...
        android:id="@+id/chatRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/chatboxLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameHeader"
        tools:itemCount="11"
        tools:listitem="@layout/chat_received">
    </android.support.v7.widget.RecyclerView>
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatRecycler">

        <EditText
            android:id="@+id/chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="3dp"
...
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            android:padding="0dp"
            tools:ignore="Autofill,HardcodedText" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_round_send"
            android:clickable="true"
...
