...
        android:textColor="#343434"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/SkipPass"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/chat_bubble_blue"
        android:fontFamily="@font/rubik_medium"
        android:onClick="skipPassword"
        android:text="Set up Later"
        android:textColor="#ffffff"
        android:typeface="sans"
        tools:ignore="HardcodedText" />


</RelativeLayout>
